# furigana-generator

./: LICENSE  README.md  furigana_generator.py  pyproject.toml  requirements.txt
